--- a/css/quips_alt.css
+++ b/css/quips_alt.css
@@ -1,8 +1,8 @@
 /* CSS Document */
 
-	a, h1 a { color: #36393B; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
-	a:visited, h1 a:visited { color: #36393B; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
-	a:hover, h1 a:hover { color: #DBDDC9; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	a, h1 a { color: #36393B; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	a:visited, h1 a:visited { color: #36393B; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	a:hover, h1 a:hover { color: #DBDDC9; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
   
 	body {
 	padding:0px;
@@ -23,26 +23,26 @@
 
 		.h1_underline {
 			text-decoration: none; 
-			background: url(pixs/underline_h1_gray.gif) repeat-x 100% 100%;
+			background: url(/pixs/underline_h1_gray.gif) repeat-x 100% 100%;
 			padding-bottom: 3px;
 			white-space: nowrap;
 		}
 
-		.h1_underline a { color: #36393B; text-decoration: none; background: url(pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
-		.h1_underline a:visited { color: #36393B;  text-decoration: none; background: url(pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
-		.h1_underline a:hover { color: #E28648;  text-decoration: none; background: url(pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline a { color: #36393B; text-decoration: none; background: url(/pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline a:visited { color: #36393B;  text-decoration: none; background: url(/pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline a:hover { color: #E28648;  text-decoration: none; background: url(/pixs/underline_h1.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
 
 		.h1_underline_cream {
 			color: #DBDDC9 !important;
 			text-decoration: none; 
-			background: url(pixs/underline_h1_cream.gif) repeat-x 100% 100%;
+			background: url(/pixs/underline_h1_cream.gif) repeat-x 100% 100%;
 			padding-bottom: 3px;
 			white-space: nowrap;
 		}
 
-		.h1_underline_cream a { color: #DBDDC9 !important; text-decoration: none; background: url(pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
-		.h1_underline_cream a:visited { color: #DBDDC9 !important;  text-decoration: none; background: url(pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
-		.h1_underline_cream a:hover { color: #E28648 !important;  text-decoration: none; background: url(pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline_cream a { color: #DBDDC9 !important; text-decoration: none; background: url(/pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline_cream a:visited { color: #DBDDC9 !important;  text-decoration: none; background: url(/pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
+		.h1_underline_cream a:hover { color: #E28648 !important;  text-decoration: none; background: url(/pixs/underline_h1_cream.gif) repeat-x 100% 100%; padding-bottom: 3px; white-space: nowrap;}
 
 	p {
 		font-family: georgia,serif;
@@ -76,7 +76,7 @@
 		text-align:left;
 		min-height:100px;
 		float:left;
-		background-image: url(pixs/bckgd_container.gif);
+		background-image: url(/pixs/bckgd_container.gif);
 		background-repeat: repeat-y;
 	}
 
@@ -262,7 +262,7 @@
 	#wrapper_main_content_area {
 		width:760px;
 		float:left;
-		background-image: url(pixs/bckgd_wrapper_content_03.gif);
+		background-image: url(/pixs/bckgd_wrapper_content_03.gif);
 		background-repeat: repeat-y;
 	}
 
@@ -271,7 +271,7 @@
 			float:left;
 			padding:0px 0px 0px 20px;
 			margin:0px 0px 0px 0px;
-			background-image: url(pixs/bckgd_wrapper_quip_orange.gif);
+			background-image: url(/pixs/bckgd_wrapper_quip_orange.gif);
 			background-repeat: repeat-y;
 		}
 		
@@ -280,7 +280,7 @@
 			float:left;
 			padding:0px 0px 0px 20px;
 			margin:0px 0px 0px 0px;
-			background-image: url(pixs/bckgd_wrapper_quip_blue.gif);
+			background-image: url(/pixs/bckgd_wrapper_quip_blue.gif);
 			background-repeat: repeat-y;
 		}		
 
@@ -289,7 +289,7 @@
 			float:left;
 			padding:0px 0px 0px 20px;
 			margin:0px 0px 0px 0px;
-			background-image: url(pixs/bckgd_wrapper_quip_green.gif);
+			background-image: url(/pixs/bckgd_wrapper_quip_green.gif);
 			background-repeat: repeat-y;
 		}
 
@@ -298,7 +298,7 @@
 			float:left;
 			padding:0px 0px 20px 20px;
 			margin:0px 0px 0px 0px;
-			background-image: url(pixs/bckgd_wrapper_quip_cream.gif);
+			background-image: url(/pixs/bckgd_wrapper_quip_cream.gif);
 			background-repeat: repeat-y;
 		}
 		
@@ -329,7 +329,7 @@
 		line-height:48px;
 		padding:10px 0px 0px 0px;
 		text-decoration: none; 
-		background: url(pixs/underline_numbers.gif) repeat-x 100% 100%;
+		background: url(/pixs/underline_numbers.gif) repeat-x 100% 100%;
 		padding-bottom: 8px;
 		white-space: nowrap;
 	}	
@@ -346,7 +346,7 @@
 			font-weight:700;
 			line-height:48px;
 			text-decoration: none; 
-			background: url(pixs/underline_numbers.gif) repeat-x 100% 100%;
+			background: url(/pixs/underline_numbers.gif) repeat-x 100% 100%;
 			padding-bottom: 12px;
 			white-space: nowrap;
 	}
@@ -358,7 +358,7 @@
 		font-weight:700;
 		line-height:48px;
 		text-decoration: none; 
-		background: url(pixs/underline_numbers.gif) repeat-x 100% 100%;
+		background: url(/pixs/underline_numbers.gif) repeat-x 100% 100%;
 		padding-bottom: 2px;
 		white-space: nowrap;
 	}	
@@ -372,9 +372,9 @@
 		padding: 0px 0px 0px 20px;
 	}
 
-	.page a { color: #9B9C9D; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
-	.page a:visited { color: #9B9C9D; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
-	.page a:hover { color: #E28648; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	.page a { color: #9B9C9D; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	.page a:visited { color: #9B9C9D; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
+	.page a:hover { color: #E28648; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 1px; white-space: nowrap;}
 
 
 	.month {
@@ -426,9 +426,9 @@
 		line-height:15px;
 	}	
 
-	.quip_data a { color: #36393B; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
-	.quip_data a:visited { color: #36393B; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
-	.quip_data a:hover { color: #DBDDC9; text-decoration: none; background: url(pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
+	.quip_data a { color: #36393B; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
+	.quip_data a:visited { color: #36393B; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
+	.quip_data a:hover { color: #DBDDC9; text-decoration: none; background: url(/pixs/underline_h1_gray_transp.png) repeat-x 100% 100%; padding-bottom: 2px; white-space: nowrap;}
 
 	.quip_date {
 		font-family: georgia,serif;
@@ -439,7 +439,7 @@
 		letter-spacing:1px;
 		text-transform:lowercase;
 		text-decoration: none; 
-		background: url(pixs/underline_numbers.gif) repeat-x 100% 100%;
+		background: url(/pixs/underline_numbers.gif) repeat-x 100% 100%;
 		padding-bottom: 4px;
 		white-space: nowrap;
 		margin:0px 0px 20px 0px;
@@ -455,7 +455,7 @@
 		letter-spacing:1px;
 		text-transform:uppercase;
 		text-decoration: none; 
-		background: url(pixs/underline_numbers.gif) repeat-x 100% 100%;
+		background: url(/pixs/underline_numbers.gif) repeat-x 100% 100%;
 		padding-bottom: 3px;
 		margin:0px 0px 10px 0px;
 		white-space: nowrap;
