Changes for pic gallery

--- a/css/quips.css
+++ b/css/quips.css
@@ -570,3 +570,4 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+.galleria{ width: 700px; height: 400px; background: #000 }
